# opuscodec

./: LICENSE  Makefile  README.md  build.sh  install_opus.sh  opusdec.py  opusenc.py  pyproject.toml  setup.py
.github/workflows/: build.yml
scripts/: build_binaries.sh  build_deps.sh
scripts/patches/: libopusenc-qext-ctl.patch  opus-tools-qext-default.patch
src/: main.cpp  opuscodec_bindings.cpp
tests/: test_bindings.py
