[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "pybind11>=2.11",
  "numpy>=1.24",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
  "B",
  "I",
  "PGH",
  "RUF",
  "UP",
]
